--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # 테마 색 설정 "air", "aqua", "contrast",
 
 # Site Settings
 locale                   : "ko_KR"
-title                    : "기록하는 개발자🌱" # Meta 태그에 들어가는 영역, masthead_title등이 없으면 기본값으로 나온다.
+title                    : "💻 [Github Blog] 기록하는 Blog" # Meta 태그에 들어가는 영역, masthead_title등이 없으면 기본값으로 나온다.
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어간다.
 subtitle                 : "Version 1.0" # 타이틀 아래에 나올 작은 글씨
 name                     : "새싹🌱" # 맨 하단 이름 적히는 영역
