--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -9,12 +9,12 @@ en: &DEFAULT_EN
   skip_footer                : "Skip to footer"
   page                       : "Page"
   pagination_previous        : "Previous"
-  pagination_next            : "Next"
+  pagination_next            : "다음"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
   menu_label                 : "Toggle menu"
-  search_label               : "Toggle search"
-  toc_label                  : "On this page"
+  search_label               : "Toggle 검색"
+  toc_label                  : "Index"
   ext_link_label             : "Direct link"
   less_than                  : "less than"
   minute_read                : "minute read"
