--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -9,11 +9,11 @@ en: &DEFAULT_EN
   skip_footer                : "Skip to footer"
   page                       : "Page"
   pagination_previous        : "Previous"
-  pagination_next            : "다음"
+  pagination_next            : "Next"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
   menu_label                 : "Toggle menu"
-  search_label               : "Toggle 검색"
+  search_label               : "Toggle Searching"
   toc_label                  : "Index"
   ext_link_label             : "Direct link"
   less_than                  : "less than"
